k8s/kcm.obmondo.com/opendesk/xwiki/xwiki.yaml
---
# Source: xwiki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  xwiki
  labels:
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.4.4
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: xwiki
    app.kubernetes.io/instance: xwiki
---
# Source: xwiki/templates/xwiki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
  labels:
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.4.4
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 1
  serviceName: xwiki
  selector:
    matchLabels:
      app.kubernetes.io/name: xwiki
      app.kubernetes.io/instance: xwiki
  template:
    metadata:
      annotations:
        # Annotations to rollout changes on configs on workload
        checksum/configmap: 25831d9af41b8f070a7aa2b0e6a84e9561f8a468e5dedc0b0eab7c4ca866077f
        checksum/initialization-configmaps: d8e38e9dc138498cfadfc68a1fcdf037b8b3b95692e6b2a641007f5917fa44f9
      labels:
        app.kubernetes.io/name: xwiki
        helm.sh/chart: xwiki-1.4.4
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: xwiki-sa
      containers:
        - name: xwiki
          image: registry.opencode.de/bmi/opendesk/components/supplier/xwiki/images-mirror/xwiki:0.25-postgres-jetty-alpine@sha256:1bfc57a65f8bc6b059d550791699b5afa33b91db8d4c75ca8f6f3d2299f7c335
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "/configmaps/entrypoint"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 100
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 60
            periodSeconds: 30
            failureThreshold: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /rest
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
            failureThreshold: 10
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /rest/wikis/xwiki/spaces
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
            failureThreshold: 10
            successThreshold: 1
          resources:
            limits:
              cpu: 99
              memory: 8Gi
            requests:
              cpu: 0.1
              memory: 1.5Gi
          volumeMounts:
            - name: xwiki-data
              mountPath: /usr/local/xwiki/data
            - name: configmaps
              mountPath: /configmaps
      securityContext:
        fsGroup: 101
      volumes:
        - name: configmaps
          configMap:
            name: xwiki-init-scripts
        - name: xwiki-data
  volumeClaimTemplates:
    - metadata:
        name: xwiki-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
        storageClassName: openebs-hostpath
---
# Source: xwiki/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
  labels:
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.4.4
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
  annotations:
    haproxy-ingress.github.io/headers: X-Forwarded-Host wiki.opendesk.kcm.obmondo.com
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/session-cookie-expires: "1800"
    nginx.ingress.kubernetes.io/session-cookie-name: XNGINX
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-read-timeout: 60s
    nginx.org/proxy-send-timeout: 60s
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "wiki.opendesk.kcm.obmondo.com"
      secretName: opendesk-certificates-tls
  rules:
    - host: "wiki.opendesk.kcm.obmondo.com"
      http:
        paths:
            - path: /
              pathType: ImplementationSpecific
              backend:
                service:
                  name: xwiki
                  port:
                    number: 80
